# bank-fastapi

./: .dockerignore  .gitignore  Makefile  README.md  alembic.ini  deploy.sh  explanation.md  local.yml  main.py  postman-prescript.js  production.yml  pyproject.toml
.envs/: .env.example
backend/app/: main.py
backend/app/api/: home.py  main.py
backend/app/api/routes/: home.py
backend/app/auth/: dependencies.py  models.py  service.py  utils.py
backend/app/auth/routes/: __init__.py  activate.py  login.py  logout.py  password_reset.py  refresh.py  register.py
backend/app/bank_account/: models.py  schema.py  service.py  utils.py
backend/app/bank_account/routes/: __init__.py  activate.py  create.py
backend/app/core/: celery_app.py  config.py  db.py  exceptions.py  health.py  logging.py  model_registry.py  resilience.py
backend/app/core/ai/: config.py  models.py  service.py  transaction_analyzer.py
backend/app/core/emails/: config.py
backend/app/core/emails/templates/: account_activated.html  account_created.html  account_lockout.html  activation.html  base.html  card_activated.html  card_blocked.html  card_created.html  deposit_alert.html  login_otp.html  password_reset.html  transfer_alert.html  transfer_otp.html  withdrawal_alert.html
backend/app/core/management/commands/: seed_db.py
backend/app/core/ml/: config.py  deployment.py  evaluation.py  feature_engineering.py  models.py  routes.py  training.py
backend/app/core/ml/datasets/: dataset_79881134da65491f8d49c11f6a6c0b23.csv
backend/app/core/rate_limit/: config.py  middleware.py  models.py
backend/app/core/services/: card_activated.py  card_blocked.py  card_created.py
backend/app/core/tasks/: image_upload.py  ml.py  statement.py
backend/app/core/utils/: image.py  number_format.py
backend/app/next_of_kin/: models.py  service.py
backend/app/next_of_kin/routes/: __init__.py  all.py  create.py  delete.py  update.py
backend/app/transaction/: models.py  schema.py  service.py  utils.py
backend/app/transaction/routes/: __init__.py  deposit.py  fraud_review.py  risk_history.py  statement.py  transaction_history.py  transfer.py  withdrawal.py
backend/app/user_profile/: models.py  service.py
backend/app/user_profile/routes/: __init__.py  all_profiles.py  create.py  me.py  update.py  upload.py
backend/app/virtual_card/: enums.py  models.py  schema.py  service.py  utils.py
backend/app/virtual_card/routes/: __init__.py  activate.py  block.py  create.py  delete.py  topup.py
backend/docker/local/fastapi/: Dockerfile  entrypoint.sh  start.sh
backend/docker/local/fastapi/celery/worker/: start.sh
backend/docker/local/traefik/: traefik.yml
backend/docker/production/fastapi/: Dockerfile  entrypoint.sh  start.sh
backend/docker/production/fastapi/celery/beat/: start.sh
backend/docker/production/fastapi/celery/flower/: start.sh
backend/docker/production/fastapi/celery/worker/: start.sh
migrations/versions/: 11f2bd4693cb_add_risk_score_table.py  25f03231638b_add_ratelimit_log_table.py  89ef083b9b87_fix_bank_account_kyc_field.py  8d8ee81b4828_add_bank_account_table.py  a3c6cbaaf8b6_add_risk_score_model.py  df42d5c5b451_add_transaction_table.py  e29a278de3cb_add_idempotency_key_table.py  ea767da8fc80_add_ml_models.py  ee132f190ac7_add_virtual_card_table.py  f1a2b3c4d5e6_money_to_numeric_and_hash_security_answers.py
