[project]
name = "bank-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "loguru>=0.7.3",
    "psycopg[binary-pool]>=3.2.9",
    "pydantic-settings>=2.9.1",
    "sqlmodel>=0.0.24",
]
