[project]
name = "bank-fastapi"
version = "0.1.0"
description = "Advance backend for bank system using FastAPI and SQLModel"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cloudinary>=1.44.0",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.6.5",
    "fastapi[standard]==0.138.0",
    "flower>=2.0.1",
    "greenlet>=3.5.3",
    "jsonpickle>=4.1.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "mlflow>=3.2.0",
    "numpy>=2.5.1",
    "pandas>=2.2.0",
    "pillow>=11.0.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.10.1",
    "redis>=8.0.1",
    "redisbeat>=1.2.2",
    "reportlab>=4.2.0",
    "scikit-learn>=1.6.0",
    "sqlmodel>=0.0.39",
]

[build-system]
requires = ["uv_build>=0.7,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = "backend"


[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "FAST"]
ignore = [
    "B008",    # FastAPI relies on calling Depends()/Query() in argument defaults.
    "FAST002", # Annotated-style dependencies: stylistic, not worth the churn.
    "UP042",   # str+Enum -> StrEnum: risky churn for SQLAlchemy enum columns.
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
